# bachelorarbeit

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  df.pkl  pyproject.toml  requirements.txt  reset_packages  test.csv
bachelorarbeit/: __init__.py  config.py  constraints.py  dataset.py  descriptive_analysis.ipynb  dtypes.py  features.py  plots.py
benchexec/: analze.ipynb  benchmark_ilp.xml  ilp_test.sh  install_tools.sh
docs/: mkdocs.yml
models/: brute_force.py  create_benchexec_tests.py  create_set_offerings.py  hill_climbing_v1.py  hill_climbing_v3.py  ilp.py  ilp_gpu.py  notebook.ipynb  offering_order.py  results.2026-02-20_07-37-57.table.csv  results_to_csv.py  run_benchmark  run_tests.py
reports/: benchmark.xlsx  benchmark_constraint_unlimited.xlsx
results/: constraint_4411_no_mondays_difficulty_10_result.json  constraint_4411_no_mondays_difficulty_11_result.json  constraint_4411_no_mondays_difficulty_12_result.json  constraint_4411_no_mondays_difficulty_13_result.json  constraint_4411_no_mondays_difficulty_14_result.json  constraint_4411_no_mondays_difficulty_15_result.json  constraint_4411_no_mondays_difficulty_16_result.json  constraint_4411_no_mondays_difficulty_17_result.json  constraint_4411_no_mondays_difficulty_1_result.json  constraint_4411_no_mondays_difficulty_2_result.json  constraint_4411_no_mondays_difficulty_3_result.json  constraint_4411_no_mondays_difficulty_4_result.json  constraint_4411_no_mondays_difficulty_5_result.json  constraint_4411_no_mondays_difficulty_6_result.json  constraint_4411_no_mondays_difficulty_7_result.json  (+848 more)
(+345 files in other folders)
